--- a/index.html
+++ b/index.html
@@ -10,28 +10,36 @@
 
 </head>
 <body>
-<div class="ui borderless topmenu menu">
+<div class="ui borderless topmenu container menu">
 
   <div class="ui container">
-    <a class="fitted item"><i class="facebook f icon"></i></a>
-    <a class="fitted item"><i class="twitter icon"></i></a>
-    <a class="fitted item"><i class="pinterest f icon"></i></a>
-    <a class="fitted item"><i class="instagram icon"></i></a>
-    <a class="fitted right item"><i class="home icon"></i></a>
-    <a class="fitted item"><i class="search icon"></i></a>
-    <a class="fitted item"><i class="user icon"></i></a>
+
+
+    <img class="ui image item" src="http://courses.ics.hawaii.edu/ics314f20/morea/ui-frameworks/murphyshawaii.png" alt ="image"/>
+
+    <a class="right item">Home</a>
     <div class="ui dropdown fitted item">
-      <div class="text">My Cart<i class="search icon"></i> 0 </div>
+    <a class="item">About Us</a>
       <i class="dropdown icon"></i>
-      <div class="menu">
-        <div class="item">My cart is currently empty></div>
-      </div>
+    </div>
+    <a class="item">St. Patrick's Day</a>
+    <div class="ui dropdown fitted item">
+    <a class="item">Menus</a>
+    <i class="dropdown icon"></i>
+    </div>
+    <a class="item">Bar</a>
+    <div class="item"><i class="search icon"></i> </div>
 
     </div>
   </div>
+
+<div class=".grad-background">
+
+<div class="ui two column grid container">
+
+</div>
 </div>
 
-<img class="ui centered image" src="https://courses.ics.hawaii.edu/ics314f21/morea/ui-frameworks/experience-islandsnow-logo.png" alt ="image"/>
 <script>
   $('.wi.dropdown')
     .dropdown()
@@ -75,7 +83,7 @@
 </div>
 <img class="ui fluid image" src="https://courses.ics.hawaii.edu/ics314f21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png" alt="image"/>
 
-<div class="footer-background">
+<div class=".footer-background">
   <div class="ui three column grid container">
     <div class="column">
       NAVIGATION
