--- a/index.html
+++ b/index.html
@@ -33,9 +33,20 @@
     </div>
   </div>
 
-<div class=".grad-background">
+<div class="grad-background">
 
 <div class="ui two column grid container">
+
+  <div class="column">
+    <img src="http://courses.ics.hawaii.edu/ics314f20/morea/ui-frameworks/murphyshawaiilogo.png" alt="a">
+    <hr/>
+  </div>
+    <div class="column">
+      A traditional place to shove food in your face and get drunk, like really really drunk, Blackout drunk, where your friends have to tell you what happened and you have to piece together clues to figure out what you did.
+      <hr/>
+      </div>
+
+
 
 </div>
 </div>
@@ -81,7 +92,6 @@
   </script>
 
 </div>
-<img class="ui fluid image" src="https://courses.ics.hawaii.edu/ics314f21/morea/ui-frameworks/experience-islandsnow-video-snapshot.png" alt="image"/>
 
 <div class=".footer-background">
   <div class="ui three column grid container">
