--- a/index.html
+++ b/index.html
@@ -34,102 +34,34 @@
   </div>
 
 <div class="grad-background">
+<div class="ui middle aligned two column grid container">
 
-<div class="ui two column grid container">
-
-  <div class="column">
+  <div class="centered column">
     <img src="http://courses.ics.hawaii.edu/ics314f20/morea/ui-frameworks/murphyshawaiilogo.png" alt="a">
     <hr/>
   </div>
-    <div class="column">
+    <div class="centered column">
       A traditional place to shove food in your face and get drunk, like really really drunk, Blackout drunk, where your friends have to tell you what happened and you have to piece together clues to figure out what you did.
       <hr/>
       </div>
 
 
-
 </div>
-</div>
-
-<script>
-  $('.wi.dropdown')
-    .dropdown()
-  ;
-</script>
-
-<div class="ui centered grid container">
-  <div class="ui borderless midmenu menu">
-    <div class="ui dropdown item">
-      <div class="text">MEN'S</div>
-      <i class="dropdown icon"></i>
-      <div class="menu">
-        <div class="item">Shirts</div>
-        <div class="item">Shorts</div>
-      </div>
-    </div>
-    <div class="ui dropdown item">
-      <div class="text">WOMEN'S</div>
-      <i class="dropdown icon"></i>
-      <div class="menu">
-        <div class="item">Shirts</div>
-        <div class="item">Shorts</div>
-      </div>
-    </div>
-    <a class="item">KID'S</a>
-    <div class="ui dropdown item">
-      <div class="text">BRANDS</div>
-      <i class="dropdown icon"></i>
-      <div class="menu">
-        <div class="item">Island Snow</div>
-        <div class="item">RCV</div>
-      </div>
-    </div>
-    <a class="item">SEARCH</a>
-  </div>
-  <script>
-    $('.ui.dropdown')
-      .dropdown();
-  </script>
-
 </div>
 
 <div class=".footer-background">
   <div class="ui three column grid container">
     <div class="column">
-      NAVIGATION
+      Lunch
       <hr/>
-
-      <div class="ui list">
-        <div class="item">About Us</div>
-        <div class="item">Videos</div>
-        <div class="item">Store Locations</div>
-      </div>
-    </div>
     <div class="column">
-      MAIN MENU
+      Bar
       <hr/>
 
-      <div class="ui list">
-        <div class="item">Men</div>
-        <div class="item">Women</div>
-        <div class="item">Kids</div>
-      </div>
-    </div>
     <div class="column">
-      CONNECT
+      Dinner
       <hr/>
 
-      <div class="ui list">
-        <div class="item">Sign up for the latest updates</div>
-        <div class="ui labeled input">
-          <input type="text" placeholder="Enter email address">
-          <div class="ui black label">
-            Join
-          </div>
-        </div>
-
-      </div>
-    </div>
   </div>
 </div>
 
